# deepfake

./: .gitignore  PROJECT_STATUS.md  README.md  init.py  main.py  pyproject.toml  start.sh  test_crop.py  test_logger_ctx.py  test_stream.py
agent/: local_run.py  test_agent.py
agent/analysis/: work.py
agent/configuration/: configuration.py
agent/graph/: __init__.py  nodes.py  state.py  workflow.py
agent/img_content/: work.py
agent/mcp/: __init__.py
agent/plan/: work.py
agent/prompt/: analyze_content.py  constitution.md
agent/summary/: work.py
agent/tools/: __init__.py  img_tool.py  registry.py  test_tool.py
chat_model/: test.py
chat_model/conf/: conf.py
chat_model/openai/: langchain_model.py  model.py  openai_model.py
db/: __init__.py  local_map.py  mongodb.py
db/conf/: conf.py
db/faiss_data/: faiss_mapping.json  img_index.faiss
entity/: agent_status.py  dump_type.py  segment_agent_config.py  segment_agent_status.py
logger/: __init__.py
mq/: consume.py  produce.py  reflection_produce.py
mq/conf/: conf.py
reflection_agent/: __init__.py  data_loader.py  main.py  reflection.py
segment_agent/: README.md  test_segment_agent.py
segment_agent/docs/: constitution.md  constitution_backup_1779026347.md  constitution_baseline_phase0.md  segment_constitution.md  segment_constitution_baseline_phase0.md
segment_agent/graph/: __init__.py  state.py  workflow.py
templates/: index.html  model_detection.html
utils/: idgen.py  img_convert.py  img_embedding.py  text_writer.py
validation/: results_n10.json  validate.py
(+41 files in other folders)
