[project]
name = "deepfakeagentdemo"
version = "0.1.0"
description = "Deepfake Agent Demo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "langchain-core>=1.2.6",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "openai>=2.14.0",
    "pillow>=12.0.0",
    "pyyaml>=6.0.3",
    "uvicorn>=0.40.0",
]
