[project]
name = "deepfakeagentdemo"
version = "0.1.0"
description = "Deepfake Agent Demo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain-core>=1.2.6",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "numpy>=2.2.6",
    "openai>=2.14.0",
    "opencv-python>=4.12.0.88",
    "pika>=1.3.2",
    "pillow>=12.0.0",
    "pymongo==4.16.0",
    "python-multipart>=0.0.21",
    "pyyaml>=6.0.3",
    "uvicorn>=0.40.0",
]
